--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tiptap/pm": "^2.10.4",
     "@tiptap/react": "^2.10.4",
     "@tiptap/starter-kit": "^2.10.4",
+    "canvas-confetti": "^1.9.3",
     "client-only": "^0.0.1",
     "jose": "^5.9.6",
     "jwt-decode": "^4.0.0",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
