--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tiptap/starter-kit": "^2.10.4",
     "canvas-confetti": "^1.9.3",
     "client-only": "^0.0.1",
+    "dompurify": "^3.2.4",
     "jose": "^5.9.6",
     "jwt-decode": "^4.0.0",
     "next": "15.1.1",
